cabal-version:      2.4
name:               vkhs
version:            0.1.0.0

executable vkhs
    main-is:          Main.hs
    other-modules:
        Shaders,
        Utils,
        Vertex,
        Vulkan,
        VulkanInstance,
        Window
    build-depends:
        base ^>=4.16.1.0,
        bytestring,
        containers,
        derive-storable,
        fixed-vector,
        GLFW-b,
        storablevector,
        text,
        vector,
        vulkan,
        vulkan-utils
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        DataKinds,
        DuplicateRecordFields,
        OverloadedStrings,
        RecordWildCards,
        ScopedTypeVariables,
        TypeApplications,
        TypeOperators

